--- a/SINMx86/SINMx86.vbproj
+++ b/SINMx86/SINMx86.vbproj
@@ -127,6 +127,7 @@
     <Import Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Localization.vb" />
     <Compile Include="MainWindow.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -155,7 +156,6 @@
     <Compile Include="LoadSplash.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Settings.vb" />
     <Compile Include="SmartWindow.Designer.vb">
       <DependentUpon>SmartWindow.vb</DependentUpon>
     </Compile>
