Open tag: v3.0.0 Build 5272 BETA

--- a/SINMx86/SINMx86.vbproj
+++ b/SINMx86/SINMx86.vbproj
@@ -127,13 +127,14 @@
     <Import Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Include\Functions.vb" />
     <Compile Include="IPInfo.Designer.vb">
       <DependentUpon>IPInfo.vb</DependentUpon>
     </Compile>
     <Compile Include="IPInfo.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Localization.vb" />
+    <Compile Include="Include\Localization.vb" />
     <Compile Include="MainWindow.vb">
       <SubType>Form</SubType>
     </Compile>
