Re-organize resources

--- a/SINMx86/SINMx86.vbproj
+++ b/SINMx86/SINMx86.vbproj
@@ -235,17 +235,17 @@
     <None Include="Resources\Splash\yuzuki.png" />
     <None Include="Resources\Splash\hikari.png" />
     <None Include="Resources\Splash\midori.png" />
-    <None Include="Resources\Controls\refresh.gif" />
-    <None Include="Resources\Controls\info.gif" />
-    <None Include="Resources\Controls\uptime.gif" />
-    <None Include="Resources\Controls\load.gif" />
-    <None Include="Resources\Controls\pin_green.gif" />
-    <None Include="Resources\Controls\pin_red.gif" />
-    <None Include="Resources\Controls\check.gif" />
-    <None Include="Resources\Controls\camera.gif" />
-    <None Include="Resources\Controls\hdd.gif" />
-    <None Include="Resources\Controls\cpu.gif" />
-    <None Include="Resources\Controls\nic.gif" />
+    <None Include="Resources\Controls\button_refresh.gif" />
+    <None Include="Resources\Controls\status_info.gif" />
+    <None Include="Resources\Controls\status_lamp.gif" />
+    <None Include="Resources\Controls\status_load.gif" />
+    <None Include="Resources\Controls\status_pin_green.gif" />
+    <None Include="Resources\Controls\status_pin_red.gif" />
+    <None Include="Resources\Controls\status_check.gif" />
+    <None Include="Resources\Controls\menu_camera.gif" />
+    <None Include="Resources\Controls\button_hdd.gif" />
+    <None Include="Resources\Controls\button_cpu.gif" />
+    <None Include="Resources\Controls\button_nic.gif" />
     <None Include="Resources\Controls\smart_error.gif" />
     <None Include="Resources\Controls\smart_ok.gif" />
     <None Include="Resources\Controls\smart_warning.gif" />
